# Rigitaeda

./: CLAUDE.md  CMakeLists.txt  README.md
docs/: 01_overview.md  02_architecture.md  03_getting_started.md  04_codec_system.md  05_protocols.md  06_threading_and_advanced.md  README.md
include/: Rigi_ClientTCP.hpp  Rigi_Codec.hpp  Rigi_Codec_HTTP1.hpp  Rigi_Codec_MQTT.hpp  Rigi_Codec_RESP.hpp  Rigi_Codec_Syslog.hpp  Rigi_Header.hpp  Rigi_SessionPool.hpp  Rigi_TCPServerMgr.hpp  Rigi_TCPSession.hpp
src/: Rigi_SessionPool.cpp  Rigi_TCPSession.cpp  main.cpp
